# rust-coal

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.sh
docs/: index.html
docs/assets/: index.html
docs/building-for-production/: index.html
docs/cli/: index.html
docs/getting-started/: index.html
docs/layouts/: index.html
docs/local-development/: index.html
docs/pages/: index.html
examples/basic/: layout.html
examples/basic/pages/: about.html  contact.html  index.html
examples/bootstrap/: layout-sign-in.html  layout.html
examples/bootstrap/pages/: index.html  login.html
examples/docs-source/: layout.html
examples/docs-source/pages/: assets.html  building-for-production.html  cli.html  getting-started.html  index.html  layouts.html  local-development.html  pages.html
examples/mvp/: layout.html  portfolio-layout.html
examples/mvp/pages/: about.html  index.html  portfolio.html
src/: build.rs  cli.rs  coal.rs  html.pest  main.rs  serve.rs
