[package]
name = "coal"
version = "0.1.0"
description = "A static HTML development tool, built with Rust"
authors = ["Cameron Manavian <cameron.manavian@gmail.com>"]
edition = "2018"
repository = "https://github.com/camsjams/rust-coal"
homepage = "https://github.com/camsjams/rust-coal"
license = "MIT"
keywords = ["html", "css", "static", "browser"]
categories = ["html", "web-programming"]

[dependencies]
actix = "0.10"
actix-files = "0.4.0"
actix-web = "3"
chrono = "0.4.19"
clap = "2.33.0"
grass = "0.10.4"
html-minifier = "3.0.7"
pest = "2.1.3"
pest_derive = "2.1.0"